<resources>
    <string name="app_name">AndroidApp TestSample</string>

    <!-- login -->
    <string name="login_title">Sign In</string>
    <string name="input_email_hint">Input your email...</string>
    <string name="input_password_hint">password</string>
    <string name="signin_btn_title">SignIn/Register</string>
    <string name="error_email">Email is wrong</string>
    <string name="error_password">Password is wrong</string>



    <!-- error dialog -->
    <string name="accept_alert">ok</string>

    <!-- base_menu -->
    <string name="logout_title">Logout</string>

</resources>
